objects/TopBoxWG__TopBox_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>TopBox_Onboarding_UsefulMaterials__c</fullName>
        <description>(Onboarding) The usefulness of the materials provided (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Onboarding_UsefulMaterials_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Onboarding_UsefulMaterials_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Onboarding_UsefulMaterials_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Onboarding_UsefulMaterials_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Onboarding_UsefulMaterials_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Onboarding_UsefulMaterials_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Onboarding_UsefulMaterials_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Onboarding_UsefulMaterials_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Onboarding_UsefulMaterials_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Onboarding_UsefulMaterials_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Onboarding_UsefulMaterials_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Onboarding_UsefulMaterials_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Onboarding_UsefulMaterials_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Onboarding) The usefulness of the materials provided (0-10 Rating)</inlineHelpText>
        <label>Onboarding-UsefulMaterials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_UsefulServices_Text__c</fullName>
        <description>(Onboarding) The usefulness of the services delivered (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) The usefulness of the services delivered (0-10 Rating)</inlineHelpText>
        <label>Onboarding-UsefulServices-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_UsefulServices__c</fullName>
        <formula>VALUE(
IF(TopBox_Onboarding_UsefulServices_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Onboarding_UsefulServices_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Onboarding_UsefulServices_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Onboarding_UsefulServices_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Onboarding_UsefulServices_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Onboarding_UsefulServices_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Onboarding_UsefulServices_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Onboarding_UsefulServices_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Onboarding_UsefulServices_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Onboarding_UsefulServices_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Onboarding_UsefulServices_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Onboarding_UsefulServices_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Onboarding_UsefulServices_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <label>Onboarding-UsefulServices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_RecommendChange__c</fullName>
        <description>(Relationship-Pre-Renewal/Steady State) If a colleague asked for a recommendation, how has your ability to recommend Copado changed over the past 6 months? (scale -5 to 5)</description>
        <inlineHelpText>(Relationship-Pre-Renewal/Steady State) If a colleague asked for a recommendation, how has your ability to recommend Copado changed over the past 6 months? (scale -5 to 5)</inlineHelpText>
        <label>RecommendChange</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Recommend_OverallComments__c</fullName>
        <description>(Recommend-Overall Comments) Please comment</description>
        <inlineHelpText>(Recommend-Overall Comments) Please comment</inlineHelpText>
        <label>Recommend-OverallComments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBox_Recommend__c</fullName>
        <description>(Onboarding) How well did your implementation experience enable you to most effectively utilize your Copado solution? (Relationship) If you were in a position to do so, how likely would you be to recommend Copado to colleagues? (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) How well did your implementation experience enable you to most effectively utilize your Copado solution? (Relationship) If you were in a position to do so, how likely would you be to recommend Copado to colleagues? (0-10 Rating)</inlineHelpText>
        <label>Recommend</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Rel_MeetExpectations_Text__c</fullName>
        <description>(Relationship) Copado&apos;s ability to meet my expectations (0-10 Rating)</description>
        <inlineHelpText>(Relationship) Copado&apos;s ability to meet my expectations (0-10 Rating)</inlineHelpText>
        <label>Relationship-MeetExpectations-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Rel_ThoughtLeadership_Text__c</fullName>
        <description>Usefulness of Copado’s thought leadership to influence business outcomes (0-10 Rating)</description>
        <inlineHelpText>Usefulness of Copado’s thought leadership to influence business outcomes (0-10 Rating)</inlineHelpText>
        <label>Relationship-ThoughtLeadership-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_AcctMgmt_Text__c</fullName>
        <description>The way Copado manages the relationship with my company (0-10 Rating)</description>
        <inlineHelpText>The way Copado manages the relationship with my company (0-10 Rating)</inlineHelpText>
        <label>Relationship-AcctMgmt-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_AcctMgmt__c</fullName>
        <description>The way Copado manages the relationship with my company (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Relationship_AcctMgmt_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Relationship_AcctMgmt_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Relationship_AcctMgmt_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Relationship_AcctMgmt_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Relationship_AcctMgmt_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Relationship_AcctMgmt_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Relationship_AcctMgmt_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Relationship_AcctMgmt_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Relationship_AcctMgmt_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Relationship_AcctMgmt_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Relationship_AcctMgmt_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Relationship_AcctMgmt_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Relationship_AcctMgmt_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>The way Copado manages the relationship with my company (0-10 Rating)</inlineHelpText>
        <label>Relationship-AcctMgmt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_CurrentDevOps__c</fullName>
        <description>The extent to which Copado keeps us current in DevOps methods and technologies (0-10 Rating)</description>
        <inlineHelpText>The extent to which Copado keeps us current in DevOps methods and technologies (0-10 Rating)</inlineHelpText>
        <label>Relationship-CurrentDevOps</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Current_Posture__c</fullName>
        <description>I currently view Copado as a:</description>
        <inlineHelpText>I currently view Copado as a:</inlineHelpText>
        <label>Relationship-Current-Posture</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Desired_Posture__c</fullName>
        <description>I would like Copado to be a:</description>
        <inlineHelpText>I would like Copado to be a:</inlineHelpText>
        <label>Relationship-Desired-Posture</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Ease__c</fullName>
        <description>The overall ease of working with Copado as a company (0-10 Rating)</description>
        <inlineHelpText>The overall ease of working with Copado as a company (0-10 Rating)</inlineHelpText>
        <label>Relationship-Ease</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Features_Text__c</fullName>
        <description>Strength of Copado’s features (0-10 Rating)</description>
        <inlineHelpText>Strength of Copado’s features (0-10 Rating)</inlineHelpText>
        <label>Relationship-Features-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Features__c</fullName>
        <description>Strength of Copado’s features (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Relationship_Features_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Relationship_Features_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Relationship_Features_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Relationship_Features_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Relationship_Features_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Relationship_Features_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Relationship_Features_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Relationship_Features_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Relationship_Features_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Relationship_Features_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Relationship_Features_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Relationship_Features_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Relationship_Features_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>Strength of Copado’s features (0-10 Rating)</inlineHelpText>
        <label>Relationship-Features</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_MakeItRight_Text__c</fullName>
        <description>(Relationship) The extent to which Copado makes things right if something goes wrong (0-10 Rating)</description>
        <inlineHelpText>(Relationship) The extent to which Copado makes things right if something goes wrong (0-10 Rating)</inlineHelpText>
        <label>Relationship-MakeItRight-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_MakeItRight__c</fullName>
        <description>(Relationship) The extent to which Copado makes things right if something goes wrong (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Relationship_MakeItRight_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Relationship_MakeItRight_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Relationship_MakeItRight_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Relationship_MakeItRight_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Relationship_MakeItRight_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Relationship_MakeItRight_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Relationship_MakeItRight_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Relationship_MakeItRight_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Relationship_MakeItRight_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Relationship_MakeItRight_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Relationship_MakeItRight_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Relationship_MakeItRight_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Relationship_MakeItRight_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Relationship) The extent to which Copado makes things right if something goes wrong (0-10 Rating)</inlineHelpText>
        <label>Relationship-MakeItRight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_MeetExpectations__c</fullName>
        <description>(Relationship) Copado&apos;s ability to meet my expectations (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Rel_MeetExpectations_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Rel_MeetExpectations_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Rel_MeetExpectations_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Rel_MeetExpectations_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Rel_MeetExpectations_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Rel_MeetExpectations_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Rel_MeetExpectations_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Rel_MeetExpectations_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Rel_MeetExpectations_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Rel_MeetExpectations_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Rel_MeetExpectations_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Rel_MeetExpectations_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Rel_MeetExpectations_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Relationship) Copado&apos;s ability to meet my expectations (0-10 Rating)</inlineHelpText>
        <label>Relationship-MeetExpectations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_OverallComments__c</fullName>
        <description>(Relationship-Overall Comments) Please comment</description>
        <inlineHelpText>(Relationship-Overall Comments) Please comment</inlineHelpText>
        <label>Relationship-OverallComments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_OverallOffering_Text__c</fullName>
        <description>Copado&apos;s offering, overall (0-10 Rating)</description>
        <inlineHelpText>Copado&apos;s offering, overall (0-10 Rating)</inlineHelpText>
        <label>Relationship-OverallOffering-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_OverallOffering__c</fullName>
        <description>Copado&apos;s offering, overall (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Relationship_OverallOffering_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Relationship_OverallOffering_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Relationship_OverallOffering_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Relationship_OverallOffering_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Relationship_OverallOffering_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Relationship_OverallOffering_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Relationship_OverallOffering_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Relationship_OverallOffering_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Relationship_OverallOffering_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Relationship_OverallOffering_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Relationship_OverallOffering_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Relationship_OverallOffering_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Relationship_OverallOffering_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>Copado&apos;s offering, overall (0-10 Rating)</inlineHelpText>
        <label>Relationship-OverallOffering</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_RecommendChange__c</fullName>
        <description>(Relationship-Pre-Renewal/Steady State) If a colleague asked for a recommendation, how has your ability to recommend Copado changed over the past 6 months? (0-10 Rating)</description>
        <inlineHelpText>(Relationship-Pre-Renewal/Steady State) If a colleague asked for a recommendation, how has your ability to recommend Copado changed over the past 6 months? (0-10 Rating)</inlineHelpText>
        <label>Relationship-RecommendChange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Recommend_Adoption__c</fullName>
        <description>(Relationship-Adoption) If you were in a position to do so, how likely would you be to recommend Copado to colleagues? (0-10 Rating)</description>
        <inlineHelpText>(Relationship-Adoption) If you were in a position to do so, how likely would you be to recommend Copado to colleagues? (0-10 Rating)</inlineHelpText>
        <label>Relationship-Recommend-Adoption</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Recommend__c</fullName>
        <description>(Relationship-Pre-Renewal/Steady State) If you were in a position to do so, how likely would you be to recommend Copado to colleagues? (0-10 Rating)</description>
        <inlineHelpText>(Relationship-Pre-Renewal/Steady State) If you were in a position to do so, how likely would you be to recommend Copado to colleagues? (0-10 Rating)</inlineHelpText>
        <label>Relationship-Recommend</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Recommendations_Text__c</fullName>
        <description>Helpfulness of Copado&apos;s recommendations (0-10 Rating)</description>
        <inlineHelpText>Helpfulness of Copado&apos;s recommendations (0-10 Rating)</inlineHelpText>
        <label>Relationship-Recommendations-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Recommendations__c</fullName>
        <description>Helpfulness of Copado&apos;s recommendations (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Relationship_Recommendations_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Relationship_Recommendations_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Relationship_Recommendations_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Relationship_Recommendations_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Relationship_Recommendations_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Relationship_Recommendations_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Relationship_Recommendations_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Relationship_Recommendations_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Relationship_Recommendations_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Relationship_Recommendations_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Relationship_Recommendations_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Relationship_Recommendations_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Relationship_Recommendations_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>Helpfulness of Copado&apos;s recommendations (0-10 Rating)</inlineHelpText>
        <label>Relationship-Recommendations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Success_Text__c</fullName>
        <description>(Relationship) The extent to which Copado cares about my success (0-10 Rating)</description>
        <inlineHelpText>(Relationship) The extent to which Copado cares about my success (0-10 Rating)</inlineHelpText>
        <label>Relationship-Success-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Success__c</fullName>
        <description>(Relationship) The extent to which Copado cares about my success (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Relationship_Success_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Relationship_Success_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Relationship_Success_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Relationship_Success_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Relationship_Success_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Relationship_Success_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Relationship_Success_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Relationship_Success_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Relationship_Success_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Relationship_Success_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Relationship_Success_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Relationship_Success_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Relationship_Success_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Relationship) The extent to which Copado cares about my success (0-10 Rating)</inlineHelpText>
        <label>Relationship-Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_TechSupport_Text__c</fullName>
        <description>My ability to get technical assistance from Copado when needed (0-10 Rating)</description>
        <inlineHelpText>My ability to get technical assistance from Copado when needed (0-10 Rating)</inlineHelpText>
        <label>Relationship-TechSupport-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_ThoughtLeadership__c</fullName>
        <description>Usefulness of Copado’s thought leadership to influence business outcomes (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Rel_ThoughtLeadership_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Rel_ThoughtLeadership_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Rel_ThoughtLeadership_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Rel_ThoughtLeadership_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Rel_ThoughtLeadership_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Rel_ThoughtLeadership_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Rel_ThoughtLeadership_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Rel_ThoughtLeadership_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Rel_ThoughtLeadership_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Rel_ThoughtLeadership_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Rel_ThoughtLeadership_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Rel_ThoughtLeadership_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Rel_ThoughtLeadership_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>Usefulness of Copado’s thought leadership to influence business outcomes (0-10 Rating)</inlineHelpText>
        <label>Relationship-ThoughtLeadership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Value_Improve__c</fullName>
        <description>What is one thing that Copado can do in the next six months that would bring the most value? (if Relationship-Value is 0-7)</description>
        <inlineHelpText>What is one thing that Copado can do in the next six months that would bring the most value? (if Relationship-Value is 0-7)</inlineHelpText>
        <label>Relationship-Value-Improve</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Value_Most__c</fullName>
        <description>What do you value most about working with Copado? (if Relationship-Value is 8-10)</description>
        <inlineHelpText>What do you value most about working with Copado? (if Relationship-Value is 8-10)</inlineHelpText>
        <label>Relationship-Value-Most</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBox_Relationship_Value__c</fullName>
        <description>The overall value of Copado&apos;s solution for our investment (0-10 Rating)</description>
        <inlineHelpText>The overall value of Copado&apos;s solution for our investment (0-10 Rating)</inlineHelpText>
        <label>Relationship-Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Success_Text__c</fullName>
        <description>The extent to which Copado cares about my success (0-10 Rating)</description>
        <inlineHelpText>The extent to which Copado cares about my success (0-10 Rating)</inlineHelpText>
        <label>Success-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Success__c</fullName>
        <description>The extent to which Copado cares about my success (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Success_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Success_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Success_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Success_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Success_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Success_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Success_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Success_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Success_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Success_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Success_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Success_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Success_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>The extent to which Copado cares about my success (0-10 Rating)</inlineHelpText>
        <label>Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TopBox Feedback</label>
    <listViews>
        <fullName>TopBoxWG__All</fullName>
        <columns>NAME</columns>
        <columns>TopBoxWG__Questionnaire_Wave__c</columns>
        <columns>TopBoxWG__Questionnaire_Type__c</columns>
        <columns>TopBoxWG__Response_Date__c</columns>
        <columns>TopBoxWG__Overall_Score__c</columns>
        <columns>TopBoxWG__Contact_ID__c</columns>
        <columns>TopBoxWG__Account_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TopBox Feedback</pluralLabel>
    <recordTypes>
        <fullName>TopBoxWG__Relationship_Questionnaire_Feedback</fullName>
        <active>true</active>
        <label>Relationship Questionnaire Feedback</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>